Поправил отсутствие диалога на сдачу квеста у Фаната в случае,
если гулаг ему назначит не своё место работы, sleeper например.

--- a/gamedata/config/misc/gulag_escape.ltx
+++ b/gamedata/config/misc/gulag_escape.ltx
@@ -1018,7 +1018,7 @@ on_info = {=hit_by_actor} %+caravan_hit_by_actor =caravan_hit_by_actor1 =caravan
 
 
 [meet@lager]
-meet_dialog = esc_lager_no_talk
+meet_dialog = {=is_it_fanat} escape_lager_leader_hello, esc_lager_no_talk
 
 [combat_ignore]
 
