--- a/gamedata/config/weapons/w_mp40.ltx
+++ b/gamedata/config/weapons/w_mp40.ltx
@@ -132,7 +132,7 @@ position         	    	= -0.026,-0.172,0
 orientation             = 0, 0, 0
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
-strap_position         	= -0.16,-0.25,-0.25			; к спине/к пузу. влево/вправо. вверх/вниз
+strap_position         	= -0.16,-0.4,0.15		; к спине/к пузу. влево/вправо. вверх/вниз
 strap_orientation      	= -10,-5,10					; (3rd person view in degrees)
 strap_bone0				= bip01_spine2
 strap_bone1				= bip01_spine1
