Фикс: При установке ЕОТЕКа на ВСС он превращался в АКОГ

--- a/gamedata/config/weapons/w_vintorez.ltx
+++ b/gamedata/config/weapons/w_vintorez.ltx
@@ -172,7 +172,7 @@ zoom_enabled			= true
 ; именно ФЕЙКИ надо - они в инвентаре ОГСЕ.
 ;а вообще лучше бы для каждой секции уникальный набор аддонов вручную ТУТ задавать
 ;ПРОБУЕМ пока один набор на всех
-highlight_addons = fake_wpn_addon_grip, fake_wpn_addon_mag_vss10, fake_wpn_addon_mag_as20, fake_wpn_addon_scope_pso1m21, fake_wpn_addon_scope_kobra, fake_wpn_addon_scope_1pn51, fake_wpn_addon_mtk83, fake_wpn_addon_acog, fake_wpn_addon_scope_eotech
+highlight_addons = fake_wpn_addon_mag_vss10, fake_wpn_addon_mag_as20, fake_wpn_addon_scope_pso1m21, fake_wpn_addon_scope_kobra, fake_wpn_addon_scope_1pn51, fake_wpn_addon_mtk83, fake_wpn_addon_acog, fake_wpn_addon_scope_eotech
 ;
 ;+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ;Флаг, позволяющий для всех предметов реагировать на флаг FRuckDefault. Если флаг установлен, хабар будет подбираться в рюкзак, а не в слот по умолчанию.
