Фикс бага: При снятии прицела с кастомного Вепря с него еще и тактическая рукоятка слетает с концами. Плюс ко всему, эта рукоятка ещё и не подсвечивается как аддон для вепря

--- a/gamedata/config/weapons/w_vepr12tor.ltx
+++ b/gamedata/config/weapons/w_vepr12tor.ltx
@@ -173,7 +173,7 @@ grenade_launcher_x 			= 111						; offset in inventory icon
 grenade_launcher_y 			= 27
 
 ;ПРОБУЕМ пока один набор на всех прописать напрямую (ВРЕМЕННО, пока KRodin в движок всё перенести не раздуплится)
-highlight_addons = fake_wpn_addon_mag_vepr4, fake_wpn_addon_mag_vepr8, fake_wpn_addon_scope_eotech, fake_wpn_addon_acog, fake_wpn_addon_scope_long
+highlight_addons = fake_wpn_addon_afg, fake_wpn_addon_mag_vepr4, fake_wpn_addon_mag_vepr8, fake_wpn_addon_scope_eotech, fake_wpn_addon_acog, fake_wpn_addon_scope_long
 ;при торговле обрабатывает не все аддоны из списка, а только те прицелы, что в секции ствола.
 ;С патронами, глушаками и подстволами всё нормально - они же движковые (не имеют фейков).
 ;Магазины, прицельные планки и ручки почему-то не обрабатываются. 
