--- a/gamedata/config/creatures/m_stalker.ltx
+++ b/gamedata/config/creatures/m_stalker.ltx
@@ -542,6 +542,11 @@ ph_skel_shot_up_factor      = 0.25
 ph_character_have_wounded_state = true; имеет ли персонаж состояние раненый
 ;----------------------------------------------------------------------
 
+; Использовать упрощенную версию can_kill_entity_from() с меньшим
+; кол-вом проверок. Проверять только по направлению стрельбы.
+fast_can_kill_entity = true
+
+
 ;--------------------------------------------------------------------------------------------------------------------
 ;--					АНИМАЦИИ ДЛЯ СМЕРТИ
 ;--------------------------------------------------------------------------------------------------------------------
