Сделал выкладываемыми Планшет Бывалого, КПК Монолитовца и какую-то книгу.
Заодно обнулил вес у каких-то невыкладываемых записок

--- a/gamedata/config/misc/items.ltx
+++ b/gamedata/config/misc/items.ltx
@@ -1523,8 +1523,9 @@ inv_grid_width		= 2
 inv_grid_height		= 2
 inv_grid_x		= 48
 inv_grid_y		= 39
-quest_item			= true
-can_trade			= false
+;KRodin: а какой смысл её постоянно таскать с собой?
+;quest_item			= true
+;can_trade			= false
 
 [book_8]:antir_f
 GroupControlSection		= spawn_group
