--- a/gamedata/config/misc/quest_items.ltx
+++ b/gamedata/config/misc/quest_items.ltx
@@ -2500,8 +2500,9 @@ inv_grid_width		= 2
 inv_grid_height		= 2
 inv_grid_x		= 27
 inv_grid_y		= 38
-quest_item			= true
-can_trade			= true
+;KRodin: нет смысла таскать его всё время с собой.
+;quest_item			= true
+;can_trade			= true
 
 
 [knyaz_pda]:antir_f
