--- a/gamedata/config/misc/tasks_items.ltx
+++ b/gamedata/config/misc/tasks_items.ltx
@@ -337,7 +337,7 @@ visual				= equipments\item_document_01.ogf
 description			= item_zapis_a_case_desc
 inv_name			= item_zapis_a_case_name
 inv_name_short		= item_zapis_a_case_name
-inv_weight			= 0.1
+inv_weight			= 0
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 16
@@ -350,7 +350,7 @@ visual				= equipments\item_document_01.ogf
 description			= item_zapis_2_a_case_desc
 inv_name			= item_zapis_a_case_name
 inv_name_short		= item_zapis_a_case_name
-inv_weight			= 0.1
+inv_weight			= 0
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 16
@@ -362,7 +362,7 @@ visual				= equipments\item_document_01.ogf
 description			= item_zapis_3_a_case_desc
 inv_name			= item_zapis_a_case_name
 inv_name_short		= item_zapis_a_case_name
-inv_weight			= 0.1
+inv_weight			= 0
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 16
@@ -375,7 +375,7 @@ visual				= equipments\item_document_01.ogf
 description			= item_pol_code_of_case_desc
 inv_name			= item_pol_code_of_case_name
 inv_name_short		= item_pol_code_of_case_name
-inv_weight			= 0.1
+inv_weight			= 0
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 16
@@ -393,6 +393,7 @@ inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 6
 inv_grid_y			= 13
+quest_item			= false
 
 ;----- КПК Скорого -----
 [pda_scoryi]:task_item_attch
