Фикс несрабатывающего клондайка в некоторых случаях

--- a/gamedata/config/scripts/jek@n/restrictions/city_kulgband_meet_zone.ltx
+++ b/gamedata/config/scripts/jek@n/restrictions/city_kulgband_meet_zone.ltx
@@ -4,7 +4,7 @@ active = {+cit_kulgband_glavar_cheat} sr_idle@2, sr_idle@1
 [sr_idle@1] 
 on_info = {+kulgband_goto_deadcity1} sr_particle@1 %=delete_dar_kulgband =spawn_city_kulgband%
 on_info2 = {+kulgband_goto_deadcity2} sr_particle@1 %=delete_dar_kulgband =spawn_city_kulgband%
-on_info3 = {-kulg_band_meet_speech_loose -freezer_bandos_kill_newbie_task +klondaik_flashes_collected =actor_has_item(klondaik_key)} nil %+klondike_acess =delete_dar_kulgband%
+on_info3 = {-kulg_band_meet_speech_loose +klondaik_flashes_collected =actor_has_item(klondaik_key)} nil %+klondike_acess =delete_dar_kulgband +kulg_band_meet_speech_fail%
 
 [sr_particle@1]
 name = explosions\group_items\campfire_01_flame00
