Пофиксил проблемы с "уникальным" винторезом

--- a/gamedata/config/weapons/w_vintorez_ex.ltx
+++ b/gamedata/config/weapons/w_vintorez_ex.ltx
@@ -721,15 +721,15 @@ $spawn				= "weapons\vintorez"
 ;квест ОТКЛЧЕН "доведённый Винторез" Бармэна «Ласка»
 ;-----------------------------------------------------------------------------
 [wpn_vintorez_m1]:wpn_vss_m20_side_rail_pso
-$spawn				= "weapons\vintorez_m1"
+;$spawn				= "weapons\vintorez_m1"
 ;+ОБМОТКА muzzle
-managed_bones = mag1, mag2, grip, custom, scope1, scope2, scope3, mount1, scope4, scope5, mount2, scope6, scope7, scope8
+;managed_bones = mag1, mag2, grip, custom, scope1, scope2, scope3, mount1, scope4, scope5, mount2, scope6, scope7, scope8
 ;--------после ЛЮБОЙ смены аддонов ПЕРЕСТАЁТ БЫТЬ уником
 ;cost				= 14200
-description			= enc_weapons1_wpn-vss_m1		;enc_weapons1_wpn-vintorez_m1
-inv_name			= wpn-vss_m1					;wpn-vintorez_m1
-inv_name_short		= wpn-vss_m1_s					;wpn-vintorez_m1
-inv_grid_x				= 0
-inv_grid_y				= 6
+;description			= enc_weapons1_wpn-vss_m1		;enc_weapons1_wpn-vintorez_m1
+;inv_name			= wpn-vss_m1					;wpn-vintorez_m1
+;inv_name_short		= wpn-vss_m1_s					;wpn-vintorez_m1
+;inv_grid_x				= 0
+;inv_grid_y				= 6
 [wpn_vintorez_m1_repair]:wpn_vss_base_repair
 
