--- a/gamedata/config/scripts/door_metal_large.ltx
+++ b/gamedata/config/scripts/door_metal_large.ltx
@@ -1,5 +1,5 @@
 [logic]
-active = ph_door@locked
+active = ph_door@close
 
 [ph_door@locked]
 locked = true
@@ -7,7 +7,8 @@ closed = true
 snd_open_start = trader_door_open_start
 snd_close_start = trader_door_close_start
 snd_close_stop = trader_door_close_stop
-hit_on_bone = 2|ph_door@close
+;hit_on_bone = 2|ph_door@close
+on_info = ph_door@close
 
 [ph_door@close]
 locked = false
@@ -16,7 +17,7 @@ snd_open_start = trader_door_open_start
 snd_close_start = trader_door_close_start
 snd_close_stop = trader_door_close_stop
 on_use = ph_door@open
-hit_on_bone = 1|ph_door@free|2|ph_door@free
+;hit_on_bone = 1|ph_door@free|2|ph_door@free
 
 [ph_door@open]
 locked = false
@@ -25,7 +26,7 @@ snd_open_start = trader_door_open_start
 snd_close_start = trader_door_close_start
 snd_close_stop = trader_door_close_stop
 on_use = ph_door@close
-hit_on_bone = 1|ph_door@free|2|ph_door@free
+;hit_on_bone = 1|ph_door@free|2|ph_door@free
 
 [ph_door@free]
 locked = false
