Поправил проблемы с аддонами у АПБ

--- a/gamedata/config/weapons/w_apb.ltx
+++ b/gamedata/config/weapons/w_apb.ltx
@@ -13,7 +13,7 @@
 ; темп стрельбы				750 в/мин
 ; боевая скорострельность	30/60 в/мин
 ;---------------------------------------------------
-[wpn_aps]:identity_immunities,base_wpn_zoom
+[wpn_aps_base]:identity_immunities,base_wpn_zoom
 GroupControlSection			= spawn_group
 discovery_dependency		= 
 $spawn          			= "weapons\aps"					; option for Level Editor
