--- a/gamedata/config/weapons/w_apb_ex.ltx
+++ b/gamedata/config/weapons/w_apb_ex.ltx
@@ -119,7 +119,7 @@ scope                    = apb_ironsight
 ; секции оружия с аддонами
 ;-----------------------------------------------------------------------------------
 ; базовая секция АПБ (-)
-[wpn_apb]:wpn_aps
+[wpn_apb]:wpn_aps_base
 fire_distance            	= 100
 silencer_fire_distance   	= 80
 scope_mount_status		= 2		; насадок (фейк)
@@ -134,6 +134,9 @@ hud = wpn_apb_hud
 tech_complication 		= 400
 repair_compatibility 	= stechkin
 
+;KRodin: затычка от проблем с аддонами
+[wpn_aps]:wpn_apb
+ 
 ;АПБ+приклад (маг)
 [wpn_apb_buttstock]:wpn_apb,apb_buttstock_p
 inv_grid_width     			= 3
