Чтобы псевдогиганты машины не подкидывали

--- a/gamedata/config/system.ltx
+++ b/gamedata/config/system.ltx
@@ -240,6 +240,7 @@ inv_grid_height			= 1
 
 script_binding  		= bind_physic_object.init
 
+ph_heavy = true; Чтоб псевдогигант бтры не раскидывал от удара ногой
 
 [actor_firsteye_cam]
 lim_pitch                = -1.5, 1.5
