Забыл заменить миниган на ДШК у кого-то в Припяти

--- a/gamedata/spawns/sources/alife_l11_pripyat.ltx
+++ b/gamedata/spawns/sources/alife_l11_pripyat.ltx
@@ -11456,11 +11456,9 @@ pri_followers = true
 [dont_spawn_character_supplies]
 
 [spawn]
-wpn_m_134
-ammo_5.56x45_ss190 = 10
+wpn_dshkm
+ammo_12.7x108 = 3
 medkit = 2
-wpn_pm
-ammo_9x18_pmm = 2
 END
 story_id = 806
 
