--- a/gamedata/config/dsh.ltx
+++ b/gamedata/config/dsh.ltx
@@ -189,6 +189,14 @@ capacity = 6 ;2
 ;================================================================
 ;**********************************************************************************
 ;
+;****************************************[АС]****************************************
+;================================================================
+; Фиксим бредовое условие нахождения Кэпа в онлайне
+[dsh.se_stalker.mil_blockpost_freedomstalker001.spawner]
+cond = true
+;================================================================
+;************************************************************************************
+;
 ;****************************************[МГ]****************************************
 ;================================================================
 [dsh.gulag.override.deadcity_contr_2] ;Контроллёры в первом здании справа при въезде в МГ с Янтаря
