Включил HugeKick_Hit_Jumping_Actor для квестового псевдыша
Он же типа дофига мощный, почему бы и нет?

--- a/gamedata/config/creatures/m_giant.ltx
+++ b/gamedata/config/creatures/m_giant.ltx
@@ -447,6 +447,8 @@ distant_idle_sound_range	= 200.0
 distant_idle_sound_delay	= 800
 idle_sound_delay		= 850
 
+HugeKick_Hit_Jumping_Actor = true
+
 [x18_giant_immunities]
 burn_immunity 			= 0.3			;коэффициенты иммунитета 
 strike_immunity 		= 0.01 --0.001 ;КRodin: уменьшил, чтоб он гарантировано убивался аномалией
