Добавил жекан спасу

--- a/gamedata/config/weapons/w_spas12.ltx
+++ b/gamedata/config/weapons/w_spas12.ltx
@@ -46,7 +46,7 @@ weapon_class			 	= shotgun
 
 ammo_elapsed		 		= 8
 ammo_mag_size		 		= 8
-ammo_class		 			= ammo_12x70_kart 
+ammo_class		 			= ammo_12x70_kart, ammo_12x76_zhekan
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
