Новые параметры для актора + понизил голод

--- a/gamedata/config/creatures/actor.ltx
+++ b/gamedata/config/creatures/actor.ltx
@@ -28,6 +28,9 @@ walk_back_coef                   = 0.8
 air_control_param                = 0.1
 walk_accel                       = 17
 
+; Блокировать прыжок на некоторое время после укуса
+hit_slowmo_jump = true
+
 ;радиус в котром над предметами выводятся их названия
 pickup_info_radius               = 5 ; 3
 
@@ -190,7 +193,7 @@ fire_wound_immunity     = 1.0
 
 [actor_condition]
 ; скорость уменьшения сытости со временем, 18 часов
-satiety_v              = 0.000015
+satiety_v = 0.000005
 ; начало полуголодного состояния, 6 часов от полной сытости
 satiety_light_limit    = 0.6666
 ; начало голодания, 12 часов от полной сытости
@@ -246,6 +249,8 @@ min_wound_size             = 0.0256   ;минимальный размер раны, после которого о
 jump_power                 = 0.01  ;умешьшение силы с прыжком без учета веса ноши
 jump_weight_power          = 0.05  ;0.045  ;умешьшение силы с прыжком с учетом веса ноши, для максимального допустимого веса
 overweight_jump_k          = 5  ;10  ;коэффициент влияние перегрузки прыжок с весом (умножается на jump_weight_power)
+; перед прыжком будет проверяться, что ГГ имеет достаточно силы для прыжка с учетом веса рюкзака
+jump_require_power = true
 
 stand_power                = -0.005     ; скорость восстановления энергии в состоянии покоя
 walk_power                 = 0.00001    ;умешьшение силы за секунду во время ходьбы без учета веса ноши
