--- a/gamedata/config/creatures/actor.ltx
+++ b/gamedata/config/creatures/actor.ltx
@@ -17,7 +17,7 @@ destroyed_vis_name               = physics\Dead_Body\skelet_crash
 
 terrain                          = actor_terrain
 
-max_item_mass                    = 50.0
+max_item_mass                    = 500.0
 jump_speed                       =8.000000
 crouch_coef                      = 0.45
 climb_coef                       = 0.7
@@ -28,10 +28,10 @@ walk_back_coef                   = 0.8
 air_control_param                = 0.1
 walk_accel                       = 17
 
-; Блокировать прыжок на некоторое время после укуса
+; ГЃГ«Г®ГЄГЁГ°Г®ГўГ ГІГј ГЇГ°Г»Г¦Г®ГЄ Г­Г  Г­ГҐГЄГ®ГІГ®Г°Г®ГҐ ГўГ°ГҐГ¬Гї ГЇГ®Г±Г«ГҐ ГіГЄГіГ±Г 
 hit_slowmo_jump = true
 
-;радиус в котром над предметами выводятся их названия
+;Г°Г Г¤ГЁГіГ± Гў ГЄГ®ГІГ°Г®Г¬ Г­Г Г¤ ГЇГ°ГҐГ¤Г¬ГҐГІГ Г¬ГЁ ГўГ»ГўГ®Г¤ГїГІГ±Гї ГЁГµ Г­Г Г§ГўГ Г­ГЁГї
 pickup_info_radius               = 5 ; 3
 
 ef_creature_type                 = 17 ; option for evaluation functions
@@ -88,27 +88,27 @@ hit_sounds                       = actor_hit_snds
 immunities_sect                  = actor_immunities_gd_master
 condition_sect                   = actor_condition
 
-heavy_breath_snd                 = actor\breath_1 ;звук тяжелого дыхания при усталости
+heavy_breath_snd                 = actor\breath_1 ;Г§ГўГіГЄ ГІГїГ¦ГҐГ«Г®ГЈГ® Г¤Г»ГµГ Г­ГЁГї ГЇГ°ГЁ ГіГ±ГІГ Г«Г®Г±ГІГЁ
 heavy_blood_snd                  = affects\heartbeat; heart\8
 
 material                         = creatures\actor
 camera_height_factor             = 0.92
 
-;дисперсия стрельбы с учетом ходьбы и бега
-disp_base                        = 0.51 ;0.8  ;угол (в градусах) разлета пуль, когда актер стоит на месте
+;Г¤ГЁГ±ГЇГҐГ°Г±ГЁГї Г±ГІГ°ГҐГ«ГјГЎГ» Г± ГіГ·ГҐГІГ®Г¬ ГµГ®Г¤ГјГЎГ» ГЁ ГЎГҐГЈГ 
+disp_base                        = 0.51 ;0.8  ;ГіГЈГ®Г« (Гў ГЈГ°Г Г¤ГіГ±Г Гµ) Г°Г Г§Г«ГҐГІГ  ГЇГіГ«Гј, ГЄГ®ГЈГ¤Г  Г ГЄГІГҐГ° Г±ГІГ®ГЁГІ Г­Г  Г¬ГҐГ±ГІГҐ
 disp_aim                         = 0.04
-disp_vel_factor                  = 1.0 ;2.0  ;на сколько увеличится дисперсия при скрости в 10 м/с (не обязательно при беге)
-disp_accel_factor                = 2.0   ;еще на сколько увеличится, если актер бежит (+ скорость)
-disp_crouch_factor               = -0.3 ;-0.2  ;уменьшение если актер сидит
-disp_crouch_no_acc_factor        = -0.6 ;-0.4  ;уменьшение если актер сидит + no acceleration
+disp_vel_factor                  = 1.0 ;2.0  ;Г­Г  Г±ГЄГ®Г«ГјГЄГ® ГіГўГҐГ«ГЁГ·ГЁГІГ±Гї Г¤ГЁГ±ГЇГҐГ°Г±ГЁГї ГЇГ°ГЁ Г±ГЄГ°Г®Г±ГІГЁ Гў 10 Г¬/Г± (Г­ГҐ Г®ГЎГїГ§Г ГІГҐГ«ГјГ­Г® ГЇГ°ГЁ ГЎГҐГЈГҐ)
+disp_accel_factor                = 2.0   ;ГҐГ№ГҐ Г­Г  Г±ГЄГ®Г«ГјГЄГ® ГіГўГҐГ«ГЁГ·ГЁГІГ±Гї, ГҐГ±Г«ГЁ Г ГЄГІГҐГ° ГЎГҐГ¦ГЁГІ (+ Г±ГЄГ®Г°Г®Г±ГІГј)
+disp_crouch_factor               = -0.3 ;-0.2  ;ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГҐ ГҐГ±Г«ГЁ Г ГЄГІГҐГ° Г±ГЁГ¤ГЁГІ
+disp_crouch_no_acc_factor        = -0.6 ;-0.4  ;ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГҐ ГҐГ±Г«ГЁ Г ГЄГІГҐГ° Г±ГЁГ¤ГЁГІ + no acceleration
 ;disp_jump_factor                 = 2.0
 
 missile_throw_offset             = 0.3, 0.5, 0.5
 
-body_remove_time                 = 60000 ;время уничтожения трупа (с учетом TimeFactor)
+body_remove_time                 = 60000 ;ГўГ°ГҐГ¬Гї ГіГ­ГЁГ·ГІГ®Г¦ГҐГ­ГЁГї ГІГ°ГіГЇГ  (Г± ГіГ·ГҐГІГ®Г¬ TimeFactor)
 
-; читается, но не используется. Надо его оставить просто как заглушку, иначе будет вылет.
-sleep_time_factor                = 0 ;во сколько раз время идет быстрее, когда актер спит
+; Г·ГЁГІГ ГҐГІГ±Гї, Г­Г® Г­ГҐ ГЁГ±ГЇГ®Г«ГјГ§ГіГҐГІГ±Гї. ГЌГ Г¤Г® ГҐГЈГ® Г®Г±ГІГ ГўГЁГІГј ГЇГ°Г®Г±ГІГ® ГЄГ ГЄ Г§Г ГЈГ«ГіГёГЄГі, ГЁГ­Г Г·ГҐ ГЎГіГ¤ГҐГІ ГўГ»Г«ГҐГІ.
+sleep_time_factor                = 0 ;ГўГ® Г±ГЄГ®Г«ГјГЄГ® Г°Г Г§ ГўГ°ГҐГ¬Гї ГЁГ¤ГҐГІ ГЎГ»Г±ГІГ°ГҐГҐ, ГЄГ®ГЈГ¤Г  Г ГЄГІГҐГ° Г±ГЇГЁГІ
 ;species of monster
 species                          = actor
 
@@ -118,23 +118,23 @@ LegsCount               = 2
 step_params             = stalker_step_manager
 foot_bones              = stalker_foot_bones
 
-;memory_update_time      = 100 ; не используется
+;memory_update_time      = 100 ; Г­ГҐ ГЁГ±ГЇГ®Г«ГјГ§ГіГҐГІГ±Гї
 
 ; visibility parameters
 DynamicObjectsCount     = 32
-min_view_distance       = 1.0 ; коэффициент, который множится на eye_range, в зависимости от угла
-max_view_distance       = 1.0 ; коэффициент, который множится на eye_range, в зависимости от угла
-visibility_threshold    = 1.0 ; значение, при достижении суммой которого объект считается видимым
+min_view_distance       = 1.0 ; ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ, ГЄГ®ГІГ®Г°Г»Г© Г¬Г­Г®Г¦ГЁГІГ±Гї Г­Г  eye_range, Гў Г§Г ГўГЁГ±ГЁГ¬Г®Г±ГІГЁ Г®ГІ ГіГЈГ«Г 
+max_view_distance       = 1.0 ; ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ, ГЄГ®ГІГ®Г°Г»Г© Г¬Г­Г®Г¦ГЁГІГ±Гї Г­Г  eye_range, Гў Г§Г ГўГЁГ±ГЁГ¬Г®Г±ГІГЁ Г®ГІ ГіГЈГ«Г 
+visibility_threshold    = 1.0 ; Г§Г­Г Г·ГҐГ­ГЁГҐ, ГЇГ°ГЁ Г¤Г®Г±ГІГЁГ¦ГҐГ­ГЁГЁ Г±ГіГ¬Г¬Г®Г© ГЄГ®ГІГ®Г°Г®ГЈГ® Г®ГЎГєГҐГЄГІ Г±Г·ГЁГІГ ГҐГІГ±Гї ГўГЁГ¤ГЁГ¬Г»Г¬
 always_visible_distance = 1.0
 time_quant              = 0.005
-decrease_value          = 0.1 ; значение, на которое уменьшается вес, если объект попал в фрустум, но отсёкся по каким-то причинам
+decrease_value          = 0.1 ; Г§Г­Г Г·ГҐГ­ГЁГҐ, Г­Г  ГЄГ®ГІГ®Г°Г®ГҐ ГіГ¬ГҐГ­ГјГёГ ГҐГІГ±Гї ГўГҐГ±, ГҐГ±Г«ГЁ Г®ГЎГєГҐГЄГІ ГЇГ®ГЇГ Г« Гў ГґГ°ГіГ±ГІГіГ¬, Г­Г® Г®ГІГ±ВёГЄГ±Гї ГЇГ® ГЄГ ГЄГЁГ¬-ГІГ® ГЇГ°ГЁГ·ГЁГ­Г Г¬
 velocity_factor         = 0.5
-luminocity_factor       = 0.5 ;0 ; фактор освещения (только для Актёра)
+luminocity_factor       = 0.5 ;0 ; ГґГ ГЄГІГ®Г° Г®Г±ГўГҐГ№ГҐГ­ГЁГї (ГІГ®Г«ГјГЄГ® Г¤Г«Гї ГЂГЄГІВёГ°Г )
 transparency_threshold  = 0.1 ;0.4 ; 0.25
-still_visible_time      = 5000 ; время, которое объект всё ещё считается видимым, даже если он уже не во фрустуме
+still_visible_time      = 5000 ; ГўГ°ГҐГ¬Гї, ГЄГ®ГІГ®Г°Г®ГҐ Г®ГЎГєГҐГЄГІ ГўГ±Вё ГҐГ№Вё Г±Г·ГЁГІГ ГҐГІГ±Гї ГўГЁГ¤ГЁГ¬Г»Г¬, Г¤Г Г¦ГҐ ГҐГ±Г«ГЁ Г®Г­ ГіГ¦ГҐ Г­ГҐ ГўГ® ГґГ°ГіГ±ГІГіГ¬ГҐ
 
 [actor_immunities_gd_novice]
-burn_immunity           = 0.5 ; коэффициенты иммунитета 
+burn_immunity           = 0.5 ; ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІГ» ГЁГ¬Г¬ГіГ­ГЁГІГҐГІГ  
 strike_immunity         = 0.5
 shock_immunity          = 0.5
 wound_immunity          = 0.5
@@ -145,7 +145,7 @@ explosion_immunity      = 0.3
 fire_wound_immunity     = 0.5
 
 ;[actor_immunities_gd_novice]
-;burn_immunity           = 0.0 ; коэффициенты иммунитета 
+;burn_immunity           = 0.0 ; ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІГ» ГЁГ¬Г¬ГіГ­ГЁГІГҐГІГ  
 ;strike_immunity         = 0.0
 ;shock_immunity          = 0.0
 ;wound_immunity          = 0.0
@@ -159,7 +159,7 @@ fire_wound_immunity     = 0.5
 
 
 [actor_immunities_gd_stalker]
-burn_immunity           = 0.65 ;коэффициенты иммунитета 
+burn_immunity           = 0.65 ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІГ» ГЁГ¬Г¬ГіГ­ГЁГІГҐГІГ  
 strike_immunity         = 0.65
 shock_immunity          = 0.65
 wound_immunity          = 0.65
@@ -170,7 +170,7 @@ explosion_immunity      = 0.3
 fire_wound_immunity     = 0.65
 
 [actor_immunities_gd_veteran]
-burn_immunity           = 0.8 ;коэффициенты иммунитета 
+burn_immunity           = 0.8 ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІГ» ГЁГ¬Г¬ГіГ­ГЁГІГҐГІГ  
 strike_immunity         = 0.8
 shock_immunity          = 0.8
 wound_immunity          = 0.8
@@ -181,7 +181,7 @@ explosion_immunity      = 0.6
 fire_wound_immunity     = 0.8
 
 [actor_immunities_gd_master]
-burn_immunity           = 1.0 ;коэффициенты иммунитета 
+burn_immunity           = 1.0 ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІГ» ГЁГ¬Г¬ГіГ­ГЁГІГҐГІГ  
 strike_immunity         = 1.0
 shock_immunity          = 1.0
 wound_immunity          = 1.0
@@ -192,99 +192,99 @@ explosion_immunity      = 1.0
 fire_wound_immunity     = 1.0
 
 [actor_condition]
-; скорость уменьшения сытости со временем, 18 часов
+; Г±ГЄГ®Г°Г®Г±ГІГј ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГї Г±Г»ГІГ®Г±ГІГЁ Г±Г® ГўГ°ГҐГ¬ГҐГ­ГҐГ¬, 18 Г·Г Г±Г®Гў
 satiety_v = 0.000005
-; начало полуголодного состояния, 6 часов от полной сытости
+; Г­Г Г·Г Г«Г® ГЇГ®Г«ГіГЈГ®Г«Г®Г¤Г­Г®ГЈГ® Г±Г®Г±ГІГ®ГїГ­ГЁГї, 6 Г·Г Г±Г®Гў Г®ГІ ГЇГ®Г«Г­Г®Г© Г±Г»ГІГ®Г±ГІГЁ
 satiety_light_limit    = 0.6666
-; начало голодания, 12 часов от полной сытости
+; Г­Г Г·Г Г«Г® ГЈГ®Г«Г®Г¤Г Г­ГЁГї, 12 Г·Г Г±Г®Гў Г®ГІ ГЇГ®Г«Г­Г®Г© Г±Г»ГІГ®Г±ГІГЁ
 satiety_critical_limit = 0.3334
-; увеличение силы при уменьшении сытости
+; ГіГўГҐГ«ГЁГ·ГҐГ­ГЁГҐ Г±ГЁГ«Г» ГЇГ°ГЁ ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГЁ Г±Г»ГІГ®Г±ГІГЁ
 satiety_power_v        = 0.000055
-; увеличение здоровья при уменьшении сытости
+; ГіГўГҐГ«ГЁГ·ГҐГ­ГЁГҐ Г§Г¤Г®Г°Г®ГўГјГї ГЇГ°ГЁ ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГЁ Г±Г»ГІГ®Г±ГІГЁ
 satiety_health_v       = 0.0001
-; критическое значения сытости (в процентах от 0..1) когда здоровье начианает уменьшаться
+; ГЄГ°ГЁГІГЁГ·ГҐГ±ГЄГ®ГҐ Г§Г­Г Г·ГҐГ­ГЁГї Г±Г»ГІГ®Г±ГІГЁ (Гў ГЇГ°Г®Г¶ГҐГ­ГІГ Гµ Г®ГІ 0..1) ГЄГ®ГЈГ¤Г  Г§Г¤Г®Г°Г®ГўГјГҐ Г­Г Г·ГЁГ Г­Г ГҐГІ ГіГ¬ГҐГ­ГјГёГ ГІГјГ±Гї
 satiety_critical       = 0.0
 
-; Скорость изменения в движке учитывается в игровом времени. Соответственно, скорость изменения
-; в реальном времени получается с учётом фактора времени. Стандартное значение time_factor = 6
-; скорость уменьшения радиации
-; Даёт выведение полной шкалы (единица) за 10000 секунд игрового времени или 1667 секунд реального времени
+; Г‘ГЄГ®Г°Г®Г±ГІГј ГЁГ§Г¬ГҐГ­ГҐГ­ГЁГї Гў Г¤ГўГЁГ¦ГЄГҐ ГіГ·ГЁГІГ»ГўГ ГҐГІГ±Гї Гў ГЁГЈГ°Г®ГўГ®Г¬ ГўГ°ГҐГ¬ГҐГ­ГЁ. Г‘Г®Г®ГІГўГҐГІГ±ГІГўГҐГ­Г­Г®, Г±ГЄГ®Г°Г®Г±ГІГј ГЁГ§Г¬ГҐГ­ГҐГ­ГЁГї
+; Гў Г°ГҐГ Г«ГјГ­Г®Г¬ ГўГ°ГҐГ¬ГҐГ­ГЁ ГЇГ®Г«ГіГ·Г ГҐГІГ±Гї Г± ГіГ·ВёГІГ®Г¬ ГґГ ГЄГІГ®Г°Г  ГўГ°ГҐГ¬ГҐГ­ГЁ. Г‘ГІГ Г­Г¤Г Г°ГІГ­Г®ГҐ Г§Г­Г Г·ГҐГ­ГЁГҐ time_factor = 6
+; Г±ГЄГ®Г°Г®Г±ГІГј ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГї Г°Г Г¤ГЁГ Г¶ГЁГЁ
+; Г„Г ВёГІ ГўГ»ГўГҐГ¤ГҐГ­ГЁГҐ ГЇГ®Г«Г­Г®Г© ГёГЄГ Г«Г» (ГҐГ¤ГЁГ­ГЁГ¶Г ) Г§Г  10000 Г±ГҐГЄГіГ­Г¤ ГЁГЈГ°Г®ГўГ®ГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ ГЁГ«ГЁ 1667 Г±ГҐГЄГіГ­Г¤ Г°ГҐГ Г«ГјГ­Г®ГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
 radiation_v             = 0.0001
-; уменьшение здоровья при воздействии радиации
-; скорость снижения здоровья также зависит от уровня радиации. 
-; общий урон здоровья за всё время выведения как:
-; <урон> = 0.5 * <полученная доза>^2 * radiation_health_v /radiation_v
-; урон от полной шкалы имеем: 0.5 * 1^2 * 0.004 / 0.0001 = 20
-; урон от половины шкалы: 0.5 * 0.5^2 * 0.004 / 0.0001 = 5
+; ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГҐ Г§Г¤Г®Г°Г®ГўГјГї ГЇГ°ГЁ ГўГ®Г§Г¤ГҐГ©Г±ГІГўГЁГЁ Г°Г Г¤ГЁГ Г¶ГЁГЁ
+; Г±ГЄГ®Г°Г®Г±ГІГј Г±Г­ГЁГ¦ГҐГ­ГЁГї Г§Г¤Г®Г°Г®ГўГјГї ГІГ ГЄГ¦ГҐ Г§Г ГўГЁГ±ГЁГІ Г®ГІ ГіГ°Г®ГўГ­Гї Г°Г Г¤ГЁГ Г¶ГЁГЁ. 
+; Г®ГЎГ№ГЁГ© ГіГ°Г®Г­ Г§Г¤Г®Г°Г®ГўГјГї Г§Г  ГўГ±Вё ГўГ°ГҐГ¬Гї ГўГ»ГўГҐГ¤ГҐГ­ГЁГї ГЄГ ГЄ:
+; <ГіГ°Г®Г­> = 0.5 * <ГЇГ®Г«ГіГ·ГҐГ­Г­Г Гї Г¤Г®Г§Г >^2 * radiation_health_v /radiation_v
+; ГіГ°Г®Г­ Г®ГІ ГЇГ®Г«Г­Г®Г© ГёГЄГ Г«Г» ГЁГ¬ГҐГҐГ¬: 0.5 * 1^2 * 0.004 / 0.0001 = 20
+; ГіГ°Г®Г­ Г®ГІ ГЇГ®Г«Г®ГўГЁГ­Г» ГёГЄГ Г«Г»: 0.5 * 0.5^2 * 0.004 / 0.0001 = 5
 radiation_health_v      = 0.004
-morale_v                = 0.0001    ;скорость восстановления морали
-; скорость восстановления psy-здоровья. С нуля полностью восстанавливается за 167 секунд реального времени
+morale_v                = 0.0001    ;Г±ГЄГ®Г°Г®Г±ГІГј ГўГ®Г±Г±ГІГ Г­Г®ГўГ«ГҐГ­ГЁГї Г¬Г®Г°Г Г«ГЁ
+; Г±ГЄГ®Г°Г®Г±ГІГј ГўГ®Г±Г±ГІГ Г­Г®ГўГ«ГҐГ­ГЁГї psy-Г§Г¤Г®Г°Г®ГўГјГї. Г‘ Г­ГіГ«Гї ГЇГ®Г«Г­Г®Г±ГІГјГѕ ГўГ®Г±Г±ГІГ Г­Г ГўГ«ГЁГўГ ГҐГІГ±Гї Г§Г  167 Г±ГҐГЄГіГ­Г¤ Г°ГҐГ Г«ГјГ­Г®ГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
 psy_health_v            = 0.001
-; естественная скорость выведения алкоголя. С единицы до нуля снижается за 
-; 1/ (6 * 0.0005) = 333 секунды реального времени
+; ГҐГ±ГІГҐГ±ГІГўГҐГ­Г­Г Гї Г±ГЄГ®Г°Г®Г±ГІГј ГўГ»ГўГҐГ¤ГҐГ­ГЁГї Г Г«ГЄГ®ГЈГ®Г«Гї. Г‘ ГҐГ¤ГЁГ­ГЁГ¶Г» Г¤Г® Г­ГіГ«Гї Г±Г­ГЁГ¦Г ГҐГІГ±Гї Г§Г  
+; 1/ (6 * 0.0005) = 333 Г±ГҐГЄГіГ­Г¤Г» Г°ГҐГ Г«ГјГ­Г®ГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
 alcohol_v               = -0.0005
-health_hit_part         = 1.0     ;процент хита, уходящий на отнимание здоровья
-power_hit_part          = 0.1     ;процент хита, уходящий на отнимание силы
-; накопление усталости (макс граница, до которой восстанавливается сила) в секунду игрового времени
-; скорость снижения верхнего предела силы определяется как max_power_leak_speed * k
-; где k - это коэффициент определяемый носимым весом, котороый линейно меняется от 1 до 2 при увеличении веса
-; с нуля до max_walk_weight и затем от 2-х растёт с приростом dw/10, где dw - превышение носимого веса над max_walk_weight
-; примечание: таким образом при превышении допустимого веса этот коэффициент начинает расти в несколько раз быстрее
+health_hit_part         = 1.0     ;ГЇГ°Г®Г¶ГҐГ­ГІ ГµГЁГІГ , ГіГµГ®Г¤ГїГ№ГЁГ© Г­Г  Г®ГІГ­ГЁГ¬Г Г­ГЁГҐ Г§Г¤Г®Г°Г®ГўГјГї
+power_hit_part          = 0.1     ;ГЇГ°Г®Г¶ГҐГ­ГІ ГµГЁГІГ , ГіГµГ®Г¤ГїГ№ГЁГ© Г­Г  Г®ГІГ­ГЁГ¬Г Г­ГЁГҐ Г±ГЁГ«Г»
+; Г­Г ГЄГ®ГЇГ«ГҐГ­ГЁГҐ ГіГ±ГІГ Г«Г®Г±ГІГЁ (Г¬Г ГЄГ± ГЈГ°Г Г­ГЁГ¶Г , Г¤Г® ГЄГ®ГІГ®Г°Г®Г© ГўГ®Г±Г±ГІГ Г­Г ГўГ«ГЁГўГ ГҐГІГ±Гї Г±ГЁГ«Г ) Гў Г±ГҐГЄГіГ­Г¤Гі ГЁГЈГ°Г®ГўГ®ГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
+; Г±ГЄГ®Г°Г®Г±ГІГј Г±Г­ГЁГ¦ГҐГ­ГЁГї ГўГҐГ°ГµГ­ГҐГЈГ® ГЇГ°ГҐГ¤ГҐГ«Г  Г±ГЁГ«Г» Г®ГЇГ°ГҐГ¤ГҐГ«ГїГҐГІГ±Гї ГЄГ ГЄ max_power_leak_speed * k
+; ГЈГ¤ГҐ k - ГЅГІГ® ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ Г®ГЇГ°ГҐГ¤ГҐГ«ГїГҐГ¬Г»Г© Г­Г®Г±ГЁГ¬Г»Г¬ ГўГҐГ±Г®Г¬, ГЄГ®ГІГ®Г°Г®Г»Г© Г«ГЁГ­ГҐГ©Г­Г® Г¬ГҐГ­ГїГҐГІГ±Гї Г®ГІ 1 Г¤Г® 2 ГЇГ°ГЁ ГіГўГҐГ«ГЁГ·ГҐГ­ГЁГЁ ГўГҐГ±Г 
+; Г± Г­ГіГ«Гї Г¤Г® max_walk_weight ГЁ Г§Г ГІГҐГ¬ Г®ГІ 2-Гµ Г°Г Г±ГІВёГІ Г± ГЇГ°ГЁГ°Г®Г±ГІГ®Г¬ dw/10, ГЈГ¤ГҐ dw - ГЇГ°ГҐГўГ»ГёГҐГ­ГЁГҐ Г­Г®Г±ГЁГ¬Г®ГЈГ® ГўГҐГ±Г  Г­Г Г¤ max_walk_weight
+; ГЇГ°ГЁГ¬ГҐГ·Г Г­ГЁГҐ: ГІГ ГЄГЁГ¬ Г®ГЎГ°Г Г§Г®Г¬ ГЇГ°ГЁ ГЇГ°ГҐГўГ»ГёГҐГ­ГЁГЁ Г¤Г®ГЇГіГ±ГІГЁГ¬Г®ГЈГ® ГўГҐГ±Г  ГЅГІГ®ГІ ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ Г­Г Г·ГЁГ­Г ГҐГІ Г°Г Г±ГІГЁ Гў Г­ГҐГ±ГЄГ®Г«ГјГЄГ® Г°Г Г§ ГЎГ»Г±ГІГ°ГҐГҐ
 ; 
-; в игре этот параметр утечки максимальной силы работает плохо, поскольку приводит к постоянному снижению предела накопления силы,
-; причём скорость снижения не зависит ни от каких обстоятельств: скорости перемещения, сытости, сна и т.п.
-; увеличен этот предел может быть только приёмом веществ, в секции которых установлено ненулевое значение eat_max_power
-; лучше оставить этот параметр нулевым (т.е. предел сверху всегда будет единица), а все эффекты свести к снижению и восстановлению
-; собственно энергии (power)
+; Гў ГЁГЈГ°ГҐ ГЅГІГ®ГІ ГЇГ Г°Г Г¬ГҐГІГ° ГіГІГҐГ·ГЄГЁ Г¬Г ГЄГ±ГЁГ¬Г Г«ГјГ­Г®Г© Г±ГЁГ«Г» Г°Г ГЎГ®ГІГ ГҐГІ ГЇГ«Г®ГµГ®, ГЇГ®Г±ГЄГ®Г«ГјГЄГі ГЇГ°ГЁГўГ®Г¤ГЁГІ ГЄ ГЇГ®Г±ГІГ®ГїГ­Г­Г®Г¬Гі Г±Г­ГЁГ¦ГҐГ­ГЁГѕ ГЇГ°ГҐГ¤ГҐГ«Г  Г­Г ГЄГ®ГЇГ«ГҐГ­ГЁГї Г±ГЁГ«Г»,
+; ГЇГ°ГЁГ·ВёГ¬ Г±ГЄГ®Г°Г®Г±ГІГј Г±Г­ГЁГ¦ГҐГ­ГЁГї Г­ГҐ Г§Г ГўГЁГ±ГЁГІ Г­ГЁ Г®ГІ ГЄГ ГЄГЁГµ Г®ГЎГ±ГІГ®ГїГІГҐГ«ГјГ±ГІГў: Г±ГЄГ®Г°Г®Г±ГІГЁ ГЇГҐГ°ГҐГ¬ГҐГ№ГҐГ­ГЁГї, Г±Г»ГІГ®Г±ГІГЁ, Г±Г­Г  ГЁ ГІ.ГЇ.
+; ГіГўГҐГ«ГЁГ·ГҐГ­ ГЅГІГ®ГІ ГЇГ°ГҐГ¤ГҐГ« Г¬Г®Г¦ГҐГІ ГЎГ»ГІГј ГІГ®Г«ГјГЄГ® ГЇГ°ГЁВёГ¬Г®Г¬ ГўГҐГ№ГҐГ±ГІГў, Гў Г±ГҐГЄГ¶ГЁГЁ ГЄГ®ГІГ®Г°Г»Гµ ГіГ±ГІГ Г­Г®ГўГ«ГҐГ­Г® Г­ГҐГ­ГіГ«ГҐГўГ®ГҐ Г§Г­Г Г·ГҐГ­ГЁГҐ eat_max_power
+; Г«ГіГ·ГёГҐ Г®Г±ГІГ ГўГЁГІГј ГЅГІГ®ГІ ГЇГ Г°Г Г¬ГҐГІГ° Г­ГіГ«ГҐГўГ»Г¬ (ГІ.ГҐ. ГЇГ°ГҐГ¤ГҐГ« Г±ГўГҐГ°ГµГі ГўГ±ГҐГЈГ¤Г  ГЎГіГ¤ГҐГІ ГҐГ¤ГЁГ­ГЁГ¶Г ), Г  ГўГ±ГҐ ГЅГґГґГҐГЄГІГ» Г±ГўГҐГ±ГІГЁ ГЄ Г±Г­ГЁГ¦ГҐГ­ГЁГѕ ГЁ ГўГ®Г±Г±ГІГ Г­Г®ГўГ«ГҐГ­ГЁГѕ
+; Г±Г®ГЎГ±ГІГўГҐГ­Г­Г® ГЅГ­ГҐГ°ГЈГЁГЁ (power)
 max_power_leak_speed       = 0.0
-max_walk_weight            =80
+max_walk_weight            =800
 
-bleeding_v                 = 0.001    ;потеря крови при номинальной ране в секунду
-wound_incarnation_v        = 0.002    ;скорость заживления раны
-min_wound_size             = 0.0256   ;минимальный размер раны, после которого она считается зажившей
+bleeding_v                 = 0.001    ;ГЇГ®ГІГҐГ°Гї ГЄГ°Г®ГўГЁ ГЇГ°ГЁ Г­Г®Г¬ГЁГ­Г Г«ГјГ­Г®Г© Г°Г Г­ГҐ Гў Г±ГҐГЄГіГ­Г¤Гі
+wound_incarnation_v        = 0.002    ;Г±ГЄГ®Г°Г®Г±ГІГј Г§Г Г¦ГЁГўГ«ГҐГ­ГЁГї Г°Г Г­Г»
+min_wound_size             = 0.0256   ;Г¬ГЁГ­ГЁГ¬Г Г«ГјГ­Г»Г© Г°Г Г§Г¬ГҐГ° Г°Г Г­Г», ГЇГ®Г±Г«ГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г®Г­Г  Г±Г·ГЁГІГ ГҐГІГ±Гї Г§Г Г¦ГЁГўГёГҐГ©
 
 ;;;;;;;;
 ;actor_condition only
 
-jump_power                 = 0.01  ;умешьшение силы с прыжком без учета веса ноши
-jump_weight_power          = 0.05  ;0.045  ;умешьшение силы с прыжком с учетом веса ноши, для максимального допустимого веса
-overweight_jump_k          = 5  ;10  ;коэффициент влияние перегрузки прыжок с весом (умножается на jump_weight_power)
-; перед прыжком будет проверяться, что ГГ имеет достаточно силы для прыжка с учетом веса рюкзака
+jump_power                 = 0.01  ;ГіГ¬ГҐГёГјГёГҐГ­ГЁГҐ Г±ГЁГ«Г» Г± ГЇГ°Г»Г¦ГЄГ®Г¬ ГЎГҐГ§ ГіГ·ГҐГІГ  ГўГҐГ±Г  Г­Г®ГёГЁ
+jump_weight_power          = 0.05  ;0.045  ;ГіГ¬ГҐГёГјГёГҐГ­ГЁГҐ Г±ГЁГ«Г» Г± ГЇГ°Г»Г¦ГЄГ®Г¬ Г± ГіГ·ГҐГІГ®Г¬ ГўГҐГ±Г  Г­Г®ГёГЁ, Г¤Г«Гї Г¬Г ГЄГ±ГЁГ¬Г Г«ГјГ­Г®ГЈГ® Г¤Г®ГЇГіГ±ГІГЁГ¬Г®ГЈГ® ГўГҐГ±Г 
+overweight_jump_k          = 5  ;10  ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ ГўГ«ГЁГїГ­ГЁГҐ ГЇГҐГ°ГҐГЈГ°ГіГ§ГЄГЁ ГЇГ°Г»Г¦Г®ГЄ Г± ГўГҐГ±Г®Г¬ (ГіГ¬Г­Г®Г¦Г ГҐГІГ±Гї Г­Г  jump_weight_power)
+; ГЇГҐГ°ГҐГ¤ ГЇГ°Г»Г¦ГЄГ®Г¬ ГЎГіГ¤ГҐГІ ГЇГ°Г®ГўГҐГ°ГїГІГјГ±Гї, Г·ГІГ® ГѓГѓ ГЁГ¬ГҐГҐГІ Г¤Г®Г±ГІГ ГІГ®Г·Г­Г® Г±ГЁГ«Г» Г¤Г«Гї ГЇГ°Г»Г¦ГЄГ  Г± ГіГ·ГҐГІГ®Г¬ ГўГҐГ±Г  Г°ГѕГЄГ§Г ГЄГ 
 jump_require_power = true
 
-stand_power                = -0.005     ; скорость восстановления энергии в состоянии покоя
-walk_power                 = 0.00001    ;умешьшение силы за секунду во время ходьбы без учета веса ноши
-walk_weight_power          = 0.00005;   ;умешьшение силы за секунду во время ходьбы с учетом веса ноши, для максимального допустимого веса
-overweight_walk_k          = 5;9 ;10   ;коэффициент влияние перегрузки ноши (умножается на walk_weight_power)
-accel_k                    = 3;5    ;коэффициент на бег (умножается walk_power, walk_weight_power)
-sprint_k                   = 75;150;185;180;200;         ;коэффициент на "sprint" бег (умножается walk_power, walk_weight_power)
+stand_power                = -0.005     ; Г±ГЄГ®Г°Г®Г±ГІГј ГўГ®Г±Г±ГІГ Г­Г®ГўГ«ГҐГ­ГЁГї ГЅГ­ГҐГ°ГЈГЁГЁ Гў Г±Г®Г±ГІГ®ГїГ­ГЁГЁ ГЇГ®ГЄГ®Гї
+walk_power                 = 0.00001    ;ГіГ¬ГҐГёГјГёГҐГ­ГЁГҐ Г±ГЁГ«Г» Г§Г  Г±ГҐГЄГіГ­Г¤Гі ГўГ® ГўГ°ГҐГ¬Гї ГµГ®Г¤ГјГЎГ» ГЎГҐГ§ ГіГ·ГҐГІГ  ГўГҐГ±Г  Г­Г®ГёГЁ
+walk_weight_power          = 0.00005;   ;ГіГ¬ГҐГёГјГёГҐГ­ГЁГҐ Г±ГЁГ«Г» Г§Г  Г±ГҐГЄГіГ­Г¤Гі ГўГ® ГўГ°ГҐГ¬Гї ГµГ®Г¤ГјГЎГ» Г± ГіГ·ГҐГІГ®Г¬ ГўГҐГ±Г  Г­Г®ГёГЁ, Г¤Г«Гї Г¬Г ГЄГ±ГЁГ¬Г Г«ГјГ­Г®ГЈГ® Г¤Г®ГЇГіГ±ГІГЁГ¬Г®ГЈГ® ГўГҐГ±Г 
+overweight_walk_k          = 5;9 ;10   ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ ГўГ«ГЁГїГ­ГЁГҐ ГЇГҐГ°ГҐГЈГ°ГіГ§ГЄГЁ Г­Г®ГёГЁ (ГіГ¬Г­Г®Г¦Г ГҐГІГ±Гї Г­Г  walk_weight_power)
+accel_k                    = 3;5    ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ Г­Г  ГЎГҐГЈ (ГіГ¬Г­Г®Г¦Г ГҐГІГ±Гї walk_power, walk_weight_power)
+sprint_k                   = 75;150;185;180;200;         ;ГЄГ®ГЅГґГґГЁГ¶ГЁГҐГ­ГІ Г­Г  "sprint" ГЎГҐГЈ (ГіГ¬Г­Г®Г¦Г ГҐГІГ±Гї walk_power, walk_weight_power)
 
-; хромота
-limping_health_begin       = 0.1  ;порог здоровья меньше которого актер начинает хромать
-limping_health_end         = 0.2  ;порог здоровья больше которого актер перестает хромать
-limping_power_begin        = 0.1  ;порог силы меньше которого актер начинает хромать
-limping_power_end          = 0.2  ;порог силы больше которого актер перестает хромать
+; ГµГ°Г®Г¬Г®ГІГ 
+limping_health_begin       = 0.1  ;ГЇГ®Г°Г®ГЈ Г§Г¤Г®Г°Г®ГўГјГї Г¬ГҐГ­ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° Г­Г Г·ГЁГ­Г ГҐГІ ГµГ°Г®Г¬Г ГІГј
+limping_health_end         = 0.2  ;ГЇГ®Г°Г®ГЈ Г§Г¤Г®Г°Г®ГўГјГї ГЎГ®Г«ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° ГЇГҐГ°ГҐГ±ГІГ ГҐГІ ГµГ°Г®Г¬Г ГІГј
+limping_power_begin        = 0.1  ;ГЇГ®Г°Г®ГЈ Г±ГЁГ«Г» Г¬ГҐГ­ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° Г­Г Г·ГЁГ­Г ГҐГІ ГµГ°Г®Г¬Г ГІГј
+limping_power_end          = 0.2  ;ГЇГ®Г°Г®ГЈ Г±ГЁГ«Г» ГЎГ®Г«ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° ГЇГҐГ°ГҐГ±ГІГ ГҐГІ ГµГ°Г®Г¬Г ГІГј
 use_limping_state          = on
 
-cant_walk_power_begin      = 0.01 ;порог силы меньше которого актер не может двигаться
-cant_walk_power_end        = 0.1  ;порог силы больше которого актер сможет двигаться
+cant_walk_power_begin      = 0.01 ;ГЇГ®Г°Г®ГЈ Г±ГЁГ«Г» Г¬ГҐГ­ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° Г­ГҐ Г¬Г®Г¦ГҐГІ Г¤ГўГЁГЈГ ГІГјГ±Гї
+cant_walk_power_end        = 0.1  ;ГЇГ®Г°Г®ГЈ Г±ГЁГ«Г» ГЎГ®Г«ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° Г±Г¬Г®Г¦ГҐГІ Г¤ГўГЁГЈГ ГІГјГ±Гї
 
-cant_sprint_power_begin    = 0.15 ;20 ;порог силы меньше которого актер не может бежать в спринте
-cant_sprint_power_end      = 0.3  ;порог силы больше которого актер сможет бежать в спринте
+cant_sprint_power_begin    = 0.15 ;20 ;ГЇГ®Г°Г®ГЈ Г±ГЁГ«Г» Г¬ГҐГ­ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° Г­ГҐ Г¬Г®Г¦ГҐГІ ГЎГҐГ¦Г ГІГј Гў Г±ГЇГ°ГЁГ­ГІГҐ
+cant_sprint_power_end      = 0.3  ;ГЇГ®Г°Г®ГЈ Г±ГЁГ«Г» ГЎГ®Г«ГјГёГҐ ГЄГ®ГІГ®Г°Г®ГЈГ® Г ГЄГІГҐГ° Г±Г¬Г®Г¦ГҐГІ ГЎГҐГ¦Г ГІГј Гў Г±ГЇГ°ГЁГ­ГІГҐ
 
 ;can_sleep_callback   = dream.can_sleep_callback
 ;sleep_video_name_callback         = dream.sleep_video_name_callback
 
 
 [actor_script_condition]
-max_sleep_hours   = 12 ; используется в диалоге сна
+max_sleep_hours   = 12 ; ГЁГ±ГЇГ®Г«ГјГ§ГіГҐГІГ±Гї Гў Г¤ГЁГ Г«Г®ГЈГҐ Г±Г­Г 
 
 
 [actor_damage]
 ;bone_name                  = <hit_scale>,<fwd_damage_anim_index>,<wound_scale>
-;<hit_scale> - коэфф. изменения хита (уменьшения здоровья) 
-;<wound_scale> - коэфф. изменения величины открытой раны
-;-1 - нет анимаций, четный номер - спереди, нечетный номер - сзади, УКАЗЫВАЕТСЯ ТОЛЬКО ПЕРЕДНИЙ!!! ЗАДНИЙ НА АВТОМАТЕ
+;<hit_scale> - ГЄГ®ГЅГґГґ. ГЁГ§Г¬ГҐГ­ГҐГ­ГЁГї ГµГЁГІГ  (ГіГ¬ГҐГ­ГјГёГҐГ­ГЁГї Г§Г¤Г®Г°Г®ГўГјГї) 
+;<wound_scale> - ГЄГ®ГЅГґГґ. ГЁГ§Г¬ГҐГ­ГҐГ­ГЁГї ГўГҐГ«ГЁГ·ГЁГ­Г» Г®ГІГЄГ°Г»ГІГ®Г© Г°Г Г­Г»
+;-1 - Г­ГҐГІ Г Г­ГЁГ¬Г Г¶ГЁГ©, Г·ГҐГІГ­Г»Г© Г­Г®Г¬ГҐГ° - Г±ГЇГҐГ°ГҐГ¤ГЁ, Г­ГҐГ·ГҐГІГ­Г»Г© Г­Г®Г¬ГҐГ° - Г±Г§Г Г¤ГЁ, Г“ГЉГЂГ‡Г›Г‚ГЂГ…Г’Г‘Гџ Г’ГЋГ‹ГњГЉГЋ ГЏГ…ГђГ…Г„ГЌГ€Г‰!!! Г‡ГЂГ„ГЌГ€Г‰ ГЌГЂ ГЂГ‚Г’ГЋГЊГЂГ’Г…
 default              = 1.0, -1, 1.0
 
 bip01_pelvis         = 1.0, 10, 1.5
@@ -336,7 +336,7 @@ bip01_r_foot         = 0.2, 6, 1.5
 bip01_r_toe0         = 0.1, 6, 1.5
 
 [actor_animation]
-;углы  дворота ног актера во время стрейфов (в градусах)
+;ГіГЈГ«Г»  Г¤ГўГ®Г°Г®ГІГ  Г­Г®ГЈ Г ГЄГІГҐГ°Г  ГўГ® ГўГ°ГҐГ¬Гї Г±ГІГ°ГҐГ©ГґГ®Гў (Гў ГЈГ°Г Г¤ГіГ±Г Гµ)
 fwd_l_strafe_yaw     = 45
 back_l_strafe_yaw    = 45
 fwd_r_strafe_yaw     = 45
